kustomise/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-deployment
  labels:
    app: &app game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *app
  template:
    metadata:
      labels:
        app: *app
    spec:
      containers:
        - name: game-deployment
          image: registry.katelinlis.com/fonly/mygame-main:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3080
      imagePullSecrets:
        - name: regcred
