kustomise/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
    - host: game.katelinlis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game-service
                port:
                  number: 80
  ingressClassName: nginx
